--- a/front/src/styles/layout.css
+++ b/front/src/styles/layout.css
@@ -90,3 +90,63 @@ button {
 	white-space: nowrap;
 	direction: ltr;
 } */
+main {
+  background-color: #f2f2f2;
+  max-width: 100vw;
+  min-height: 100vh;
+  position: relative;
+  margin-top: 100px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  background-color: #12312a;
+  color: #fdbb18;
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  width: 100%;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #12312a;
+  color: #fdbb18;
+  height: 160px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+}
+
+.logo {
+  display: flex;
+}
+
+nav {
+  margin: 10px;
+  justify-content: flex-end;
+}
+
+nav .nav-links {
+  display: flex;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px;
+}
+
+nav NavLink {
+  flex-grow: 1;
+  cursor: pointer;
+  position: relative;
+  color: #fdbb18;
+  left: 10px;
+  top: 10px;
+  text-decoration: none;
+  text-transform: lowercase;
+  text-shadow: rgba(0, 0, 0, 0.1) 2px 2px;
+  transition: flex-grow 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
