--- a/front/src/styles/store.css
+++ b/front/src/styles/store.css
@@ -3,7 +3,6 @@ https://www.w3schools.com/sass/default.php
 https://sass-lang.com/guide 
 */
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Prociono&family=Raleway:wght@600;700&display=swap");
-@use 'layout';
 * {
   box-sizing: border-box;
   margin: 0;
@@ -12,46 +11,101 @@ https://sass-lang.com/guide
 
 h1 {
   font-size: 40px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700px;
 }
 
 h2 {
   font-size: 24px;
-  font-family: 'Prociono', serif;
+  font-family: "Prociono", serif;
 }
 
 h3 {
   font-size: 20px;
-  font-family: 'Prociono', serif;
+  font-family: "Prociono", serif;
 }
 
 h5 {
   font-size: 48px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700px;
 }
 
 p {
   font-size: 16px;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
 }
 
-button {
-  border: none;
-  background-color: #fdbb18;
-  color: #12312a;
+nav {
+  justify-content: flex-start;
 }
 
-/* Home */
+.nav-links > * {
+  z-index: 2;
+  color: #fdbb18;
+  position: relative;
+  left: 10px;
+  top: 10px;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.nav-links:active {
+  color: #fdbb18;
+  text-decoration: none;
+}
+
+.nav-links:visited {
+  color: #fdbb18;
+  text-decoration: none;
+}
+
+main {
+  background-color: #f2f2f2;
+  max-width: 100vw;
+  min-height: 100vh;
+  position: relative;
+  margin-top: 100px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  background-color: #12312a;
+  color: #fdbb18;
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  width: 100%;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #12312a;
+  color: #fdbb18;
+  height: 160px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+}
+
 .clrbox {
   height: 200px;
   border: 2px solid black;
   width: 200px;
 }
 
-/* Edited Icons */
+/* .bg{background: #000;}
+.1{background: #000;}
+.2{background: #000;}
+.3{background: #000;}
+.4{background: #000;}
+ */
 /* 
 .pulse {
 	animation: pulse 3s infinite;
@@ -89,4 +143,4 @@ button {
 	word-wrap: normal;
 	white-space: nowrap;
 	direction: ltr;
-} */
+} *//*# sourceMappingURL=store.css.map */
