--- a/front/src/styles/index.css
+++ b/front/src/styles/index.css
@@ -2,40 +2,103 @@
 https://www.w3schools.com/sass/default.php
 https://sass-lang.com/guide 
 */
+/* Edited Icons 
+// .pulse {
+// 	animation: pulse 3s infinite;
+// }
+
+// @keyframes pulse {
+// 	0% {
+// 		font-variation-settings: 'wght' 100;
+// 	}
+// 	50% {
+// 		font-variation-settings: 'wght' 700;
+// 	}
+// 	100% {
+// 		font-variation-settings: 'wght' 100;
+// 	}
+// }
+
+// .thin-icons {
+// 	font-variation-settings: 'FILL' 0, 'wght' 100, 'GRAD' 0, 'opsz' 48;
+// }
+
+// .thick-fill-icons {
+// 	font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;
+// }
+
+// .material-symbols-outlined {
+// 	font-family: 'Material Symbols Outlined';
+// 	font-weight: normal;
+// 	font-style: normal;
+// 	font-size: 24px; 
+// 	Preferred icon size 
+// 	display: inline-block;
+// 	line-height: 1;
+// 	text-transform: none;
+// 	letter-spacing: normal;
+// 	word-wrap: normal;
+// 	white-space: nowrap;
+// 	direction: ltr;
+// }
+*/
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Prociono&family=Raleway:wght@600;700&display=swap");
-@use 'layout';
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+main {
+  background-color: #f2f2f2;
+  max-width: 100vw;
+  min-height: 100vh;
+  position: relative;
+  margin-top: 100px;
 }
 
-h1 {
-  font-size: 40px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700px;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  background-color: #12312a;
+  color: #fdbb18;
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  width: 100%;
 }
 
-h2 {
-  font-size: 24px;
-  font-family: 'Prociono', serif;
+.logo {
+  display: flex;
+  align-self: center;
 }
 
-h3 {
-  font-size: 20px;
-  font-family: 'Prociono', serif;
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 10px;
+  position: absolute;
+  top: 20px;
+  left: 10px NavLink;
+  left-margin: 5px;
+  left-position: absolute;
+  left-flex-grow: 1;
+  left-cursor: pointer;
+  left-position: relative;
+  left-color: #fdbb18;
+  left-left: 10px;
+  left-top: 10px;
+  left-text-decoration: none;
+  left-text-transform: lowercase;
+  left-text-shadow: rgba(0, 0, 0, 0.1) 2px 2px;
+  left-transition: flex-grow 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
-h5 {
-  font-size: 48px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700px;
-}
-
-p {
-  font-size: 16px;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 400;
+footer {
+  background-color: #12312a;
+  color: #fdbb18;
+  height: 500px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  word-wrap: break-word;
 }
 
 button {
@@ -43,50 +106,172 @@ button {
   background-color: #fdbb18;
   color: #12312a;
 }
+button:hover {
+  background-color: #12312a;
+  color: #fdbb18;
+}
 
-/* Home */
-.clrbox {
-  height: 200px;
+.page-wrap {
+  position: relative;
+  margin-bottom: 500px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.nav-links > a:nth-child(1) {
+  margin: 10px;
+}
+
+.font-box {
   border: 2px solid black;
-  width: 200px;
+  width: 90%;
+  height: 600px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-/* Edited Icons */
-/* 
-.pulse {
-	animation: pulse 3s infinite;
+.color-box {
+  border: 2px solid black;
+  width: 90%;
+  height: 600px;
+  margin: 0 auto;
+  padding: 10px;
+  display: grid;
+  position: relative;
+}
+.color-box .box1 {
+  background-color: #f2f2f2;
+  border: 2px solid black;
+}
+.color-box .box2 {
+  background-color: #045843;
+}
+.color-box .box3 {
+  background-color: #12312a;
+}
+.color-box .box4 {
+  background-color: #fdbb18;
+}
+.color-box .box5 {
+  background-color: #e39927;
 }
 
-@keyframes pulse {
-	0% {
-		font-variation-settings: 'wght' 100;
-	}
-	50% {
-		font-variation-settings: 'wght' 700;
-	}
-	100% {
-		font-variation-settings: 'wght' 100;
-	}
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
 }
 
-.thin-icons {
-	font-variation-settings: 'FILL' 0, 'wght' 100, 'GRAD' 0, 'opsz' 48;
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
 }
 
-.thick-fill-icons {
-	font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+  color: #d1d1d1;
+  margin-bottom: 10px;
+  text-align: left;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: #ffffff;
+}
+
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 40px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700px;
+}
+
+h2 {
+  font-size: 24px;
+  font-family: "Prociono", serif;
+}
+
+h3 {
+  font-size: 20px;
+  font-family: "Prociono", serif;
+}
+
+h5 {
+  font-size: 48px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700px;
+}
+
+p {
+  font-size: 16px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
 }
 
 .material-symbols-outlined {
-	font-family: 'Material Symbols Outlined';
-	font-weight: normal;
-	font-style: normal;
-	font-size: 24px; /* Preferred icon size */
-/* display: inline-block;
-	line-height: 1;
-	text-transform: none;
-	letter-spacing: normal;
-	word-wrap: normal;
-	white-space: nowrap;
-	direction: ltr;
-} */
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 48;
+}/*# sourceMappingURL=index.css.map */
